Fix spacing on images

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ nav {
 }
 
 #portfolio section {
-  max-width: 200px;
+  max-width: 180px;
 }
 
 /* Paragraphs */
